changes on migation and doctor
