# cmd/api/doctors.go
@@ -3,6 +3,7 @@ package main
 import (
 	"context"
 	"errors"
+	"fmt"
 	"net/http"
 	"strconv"
 
@@ -14,7 +15,20 @@ type doctorKey string
 
 const doctorCtx doctorKey = "doctor"
 
-func (app *application) getDoctorHandler(w http.ResponseWriter, r *http.Request) {
+// getByID godoc
+//
+//	@Summary		Fetches the doctor by id
+//	@Description	Fetches the doctor by id
+//	@Tags			doctor
+//	@Accept			json
+//	@Produce		json
+//	@Param			doctorID	path		int		true	"Doctor ID"
+//	@Success		204			{string}	string	"Doctor Found"
+//	@Failure		400			{object}	error	"Doctor Id  missing"
+//	@Failure		404			{object}	error	"Dctor not found"
+//	@Security		ApiKeyAuth
+//	@Router			/doctors/{doctorID} [get]
+func (app *application) GetByID(w http.ResponseWriter, r *http.Request) {
 	doctor := getDoctorFromCtx(r)
 
 	if err := app.jsonResponse(w, http.StatusOK, doctor); err != nil {
@@ -25,6 +39,7 @@ func (app *application) getDoctorHandler(w http.ResponseWriter, r *http.Request)
 func (app *application) doctorContextMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		idParam := chi.URLParam(r, "doctorID")
+		fmt.Print(idParam)
 		id, err := strconv.ParseInt(idParam, 10, 64)
 		if err != nil {
 			app.internalServerError(w, r, err)
@@ -51,25 +66,4 @@ func (app *application) doctorContextMiddleware(next http.Handler) http.Handler 
 func getDoctorFromCtx(r *http.Request) *store.Doctor {
 	doctor, _ := r.Context().Value(doctorCtx).(*store.Doctor)
 	return doctor
-}
-
-func (app *application) getDoctorsHandler(w http.ResponseWriter, r *http.Request) {
-	filter := store.DoctorFilter{
-		Designation:   r.URL.Query().Get("designation"),
-		Qualification: r.URL.Query().Get("qualification"),
-		Country:       r.URL.Query().Get("country"),
-		State:         r.URL.Query().Get("state"),
-		City:          r.URL.Query().Get("city"),
-		Day:           r.URL.Query().Get("day"),
-	}
-
-	doctors, err := app.store.Doctors.GetDoctorsByFilter(r.Context(), filter)
-	if err != nil {
-		app.internalServerError(w, r, err)
-		return
-	}
-
-	if err := app.jsonResponse(w, http.StatusOK, doctors); err != nil {
-		app.internalServerError(w, r, err)
-	}
 }
